<resources>
    <string name="app_name">AddressBookApp</string>
    <string name="contactdetails">Contact details:</string>
    <string name="firstname">First name:</string>
    <string name="lastname">Last name:</string>
    <string name="phonenumber">Phone number:</string>
    <string name="address">Address:</string>
    <string name="add">ADD</string>
    <string name="save">SAVE</string>
    <string name="load">LOAD</string>
    <string name="search">SEARCH</string>
</resources>
